# lashdb_query_engine

./: .gitignore  Cargo.toml  README.md  hardware_native.fdb.meta.json
.github/: FUNDING.yml
hardware_native.fdb.tables/: address.tbl
src/: lib.rs  main.rs  metrics.rs  query.rs  server.rs  server_optimized.rs  sql.rs  storage.rs  storage_optimized.rs  web.rs
src/web_static/: index.html  main.js  package-lock.json  package.json  script.js  style.css  tailwind.config.js  vite.config.js
src/web_static/src/: App.jsx  Login.jsx  UserManagement.jsx  index.css
test/: read.py  write.py
